src/main/java/ufpi/compiladores/parser/GramaticaSimpParser.java
// Generated from C:/projetos/analise-lexica-sintatica/src/main/java/ufpi/compiladores/GramaticaSimp.g4 by ANTLR 4.13.1
package ufpi.compiladores.parser;

    import java.util.*;
    import ufpi.compiladores.backend.TabelaSimbolo;
    import ufpi.compiladores.backend.Variavel;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GramaticaSimpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, BEGIN=6, END=7, VAR=8, REPEAT=9, 
		UNTIL=10, IF=11, ELSE=12, THEN=13, ENDIF=14, PRINT=15, READ=16, OPERADOR=17, 
		NOT=18, AND=19, OR=20, Op1=21, Op2=22, TRUE=23, FALSE=24, TIPOS=25, CONVERSAO_EXPLICITO=26, 
		NOME_VARIAVEL=27, CMD_ATRIBUICAO=28, NUMERO=29, CADEIA=30, INT=31, FLOAT=32, 
		COMENTARIOS=33, ESCAPES=34;
	public static final int
		RULE_programa = 0, RULE_comandos = 1, RULE_comandosDel = 2, RULE_declaracaoVariaveis = 3, 
		RULE_comandoRepeat = 4, RULE_atribuicaoVariavel = 5, RULE_comandoPrint = 6, 
		RULE_comandoRead = 7, RULE_comandoIf = 8, RULE_listaArgumentosPrint = 9, 
		RULE_argumentoPrint = 10, RULE_listaArgumentosRead = 11, RULE_expressaoAritmetica = 12, 
		RULE_termoAri = 13, RULE_fatorAri = 14, RULE_expressaoBooleana = 15, RULE_termoBool = 16, 
		RULE_fatorBool = 17, RULE_relacional = 18, RULE_relacao = 19, RULE_negacao = 20, 
		RULE_conversaoExplicita = 21, RULE_variavelValor = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "comandos", "comandosDel", "declaracaoVariaveis", "comandoRepeat", 
			"atribuicaoVariavel", "comandoPrint", "comandoRead", "comandoIf", "listaArgumentosPrint", 
			"argumentoPrint", "listaArgumentosRead", "expressaoAritmetica", "termoAri", 
			"fatorAri", "expressaoBooleana", "termoBool", "fatorBool", "relacional", 
			"relacao", "negacao", "conversaoExplicita", "variavelValor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "':'", "'('", "')'", "'begin'", "'end.'", "'var'", 
			"'repeat'", "'until'", "'if'", "'else'", "'then'", "'endif'", "'print'", 
			"'read'", null, "'!'", "'and'", "'or'", null, null, "'true'", "'false'", 
			null, null, null, "':='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "BEGIN", "END", "VAR", "REPEAT", 
			"UNTIL", "IF", "ELSE", "THEN", "ENDIF", "PRINT", "READ", "OPERADOR", 
			"NOT", "AND", "OR", "Op1", "Op2", "TRUE", "FALSE", "TIPOS", "CONVERSAO_EXPLICITO", 
			"NOME_VARIAVEL", "CMD_ATRIBUICAO", "NUMERO", "CADEIA", "INT", "FLOAT", 
			"COMENTARIOS", "ESCAPES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GramaticaSimp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    TabelaSimbolo tabelaSimbolos = new TabelaSimbolo();

	public GramaticaSimpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(GramaticaSimpParser.BEGIN, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode END() { return getToken(GramaticaSimpParser.END, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(BEGIN);
			setState(47);
			comandos();
			setState(48);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandosContext extends ParserRuleContext {
		public List<ComandosDelContext> comandosDel() {
			return getRuleContexts(ComandosDelContext.class);
		}
		public ComandosDelContext comandosDel(int i) {
			return getRuleContext(ComandosDelContext.class,i);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			comandosDel();
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(51);
				match(T__0);
				setState(52);
				comandosDel();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandosDelContext extends ParserRuleContext {
		public DeclaracaoVariaveisContext declaracaoVariaveis;
		public DeclaracaoVariaveisContext declaracaoVariaveis() {
			return getRuleContext(DeclaracaoVariaveisContext.class,0);
		}
		public AtribuicaoVariavelContext atribuicaoVariavel() {
			return getRuleContext(AtribuicaoVariavelContext.class,0);
		}
		public ComandoPrintContext comandoPrint() {
			return getRuleContext(ComandoPrintContext.class,0);
		}
		public ComandoReadContext comandoRead() {
			return getRuleContext(ComandoReadContext.class,0);
		}
		public ComandoRepeatContext comandoRepeat() {
			return getRuleContext(ComandoRepeatContext.class,0);
		}
		public ComandoIfContext comandoIf() {
			return getRuleContext(ComandoIfContext.class,0);
		}
		public ComandosDelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandosDel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterComandosDel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitComandosDel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitComandosDel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosDelContext comandosDel() throws RecognitionException {
		ComandosDelContext _localctx = new ComandosDelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comandosDel);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				((ComandosDelContext)_localctx).declaracaoVariaveis = declaracaoVariaveis();


				System.out.println("Tipo Declaracao: "+ ((ComandosDelContext)_localctx).declaracaoVariaveis.tipoDeclaracao);
				tabelaSimbolos.printVariaveis();


				}
				break;
			case NOME_VARIAVEL:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				atribuicaoVariavel();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				comandoPrint();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				comandoRead();
				}
				break;
			case REPEAT:
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				comandoRepeat();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 6);
				{
				setState(65);
				comandoIf();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoVariaveisContext extends ParserRuleContext {
		public String tipoDeclaracao;
		public Token NOME_VARIAVEL;
		public Token TIPOS;
		public TerminalNode VAR() { return getToken(GramaticaSimpParser.VAR, 0); }
		public List<TerminalNode> NOME_VARIAVEL() { return getTokens(GramaticaSimpParser.NOME_VARIAVEL); }
		public TerminalNode NOME_VARIAVEL(int i) {
			return getToken(GramaticaSimpParser.NOME_VARIAVEL, i);
		}
		public TerminalNode TIPOS() { return getToken(GramaticaSimpParser.TIPOS, 0); }
		public DeclaracaoVariaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoVariaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterDeclaracaoVariaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitDeclaracaoVariaveis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitDeclaracaoVariaveis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoVariaveisContext declaracaoVariaveis() throws RecognitionException {
		DeclaracaoVariaveisContext _localctx = new DeclaracaoVariaveisContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracaoVariaveis);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((DeclaracaoVariaveisContext)_localctx).tipoDeclaracao =  "";
			setState(69);
			match(VAR);
			setState(70);
			((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL = match(NOME_VARIAVEL);

			    tabelaSimbolos.declararVariavel((((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL!=null?((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL.getText():null), new Variavel((((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL!=null?((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL.getText():null)));

			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(72);
				match(T__1);
				setState(73);
				((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL = match(NOME_VARIAVEL);

				    tabelaSimbolos.declararVariavel((((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL!=null?((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL.getText():null), new Variavel((((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL!=null?((DeclaracaoVariaveisContext)_localctx).NOME_VARIAVEL.getText():null)));

				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(T__2);
			setState(81);
			((DeclaracaoVariaveisContext)_localctx).TIPOS = match(TIPOS);
			tabelaSimbolos.atualizarTipo((((DeclaracaoVariaveisContext)_localctx).TIPOS!=null?((DeclaracaoVariaveisContext)_localctx).TIPOS.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoRepeatContext extends ParserRuleContext {
		public TerminalNode REPEAT() { return getToken(GramaticaSimpParser.REPEAT, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode UNTIL() { return getToken(GramaticaSimpParser.UNTIL, 0); }
		public ExpressaoBooleanaContext expressaoBooleana() {
			return getRuleContext(ExpressaoBooleanaContext.class,0);
		}
		public TerminalNode TRUE() { return getToken(GramaticaSimpParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(GramaticaSimpParser.FALSE, 0); }
		public ComandoRepeatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandoRepeat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterComandoRepeat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitComandoRepeat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitComandoRepeat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoRepeatContext comandoRepeat() throws RecognitionException {
		ComandoRepeatContext _localctx = new ComandoRepeatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comandoRepeat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(REPEAT);
			setState(85);
			comandos();
			setState(86);
			match(UNTIL);
			setState(87);
			match(T__3);
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
			case NOT:
			case NOME_VARIAVEL:
			case NUMERO:
				{
				setState(88);
				expressaoBooleana();
				}
				break;
			case TRUE:
				{
				setState(89);
				match(TRUE);
				}
				break;
			case FALSE:
				{
				setState(90);
				match(FALSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(93);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoVariavelContext extends ParserRuleContext {
		public List<TerminalNode> NOME_VARIAVEL() { return getTokens(GramaticaSimpParser.NOME_VARIAVEL); }
		public TerminalNode NOME_VARIAVEL(int i) {
			return getToken(GramaticaSimpParser.NOME_VARIAVEL, i);
		}
		public TerminalNode CMD_ATRIBUICAO() { return getToken(GramaticaSimpParser.CMD_ATRIBUICAO, 0); }
		public ExpressaoAritmeticaContext expressaoAritmetica() {
			return getRuleContext(ExpressaoAritmeticaContext.class,0);
		}
		public TerminalNode INT() { return getToken(GramaticaSimpParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(GramaticaSimpParser.FLOAT, 0); }
		public AtribuicaoVariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicaoVariavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterAtribuicaoVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitAtribuicaoVariavel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitAtribuicaoVariavel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtribuicaoVariavelContext atribuicaoVariavel() throws RecognitionException {
		AtribuicaoVariavelContext _localctx = new AtribuicaoVariavelContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atribuicaoVariavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(NOME_VARIAVEL);
			setState(96);
			match(CMD_ATRIBUICAO);
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(97);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 6576668672L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 2:
				{
				setState(98);
				expressaoAritmetica();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoPrintContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(GramaticaSimpParser.PRINT, 0); }
		public ListaArgumentosPrintContext listaArgumentosPrint() {
			return getRuleContext(ListaArgumentosPrintContext.class,0);
		}
		public ComandoPrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandoPrint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterComandoPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitComandoPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitComandoPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoPrintContext comandoPrint() throws RecognitionException {
		ComandoPrintContext _localctx = new ComandoPrintContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comandoPrint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(PRINT);
			setState(102);
			match(T__3);
			setState(103);
			listaArgumentosPrint();
			setState(104);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoReadContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(GramaticaSimpParser.READ, 0); }
		public ListaArgumentosReadContext listaArgumentosRead() {
			return getRuleContext(ListaArgumentosReadContext.class,0);
		}
		public ComandoReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandoRead; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterComandoRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitComandoRead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitComandoRead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoReadContext comandoRead() throws RecognitionException {
		ComandoReadContext _localctx = new ComandoReadContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comandoRead);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(READ);
			setState(107);
			match(T__3);
			setState(108);
			listaArgumentosRead();
			setState(109);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoIfContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(GramaticaSimpParser.IF, 0); }
		public TerminalNode THEN() { return getToken(GramaticaSimpParser.THEN, 0); }
		public List<ComandosContext> comandos() {
			return getRuleContexts(ComandosContext.class);
		}
		public ComandosContext comandos(int i) {
			return getRuleContext(ComandosContext.class,i);
		}
		public TerminalNode ENDIF() { return getToken(GramaticaSimpParser.ENDIF, 0); }
		public ExpressaoBooleanaContext expressaoBooleana() {
			return getRuleContext(ExpressaoBooleanaContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(GramaticaSimpParser.ELSE, 0); }
		public ComandoIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandoIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterComandoIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitComandoIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitComandoIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoIfContext comandoIf() throws RecognitionException {
		ComandoIfContext _localctx = new ComandoIfContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comandoIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(IF);
			setState(112);
			match(T__3);
			{
			setState(113);
			expressaoBooleana();
			}
			setState(114);
			match(T__4);
			setState(115);
			match(THEN);
			setState(116);
			comandos();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(117);
				match(ELSE);
				setState(118);
				comandos();
				}
			}

			setState(121);
			match(ENDIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaArgumentosPrintContext extends ParserRuleContext {
		public List<ArgumentoPrintContext> argumentoPrint() {
			return getRuleContexts(ArgumentoPrintContext.class);
		}
		public ArgumentoPrintContext argumentoPrint(int i) {
			return getRuleContext(ArgumentoPrintContext.class,i);
		}
		public ListaArgumentosPrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaArgumentosPrint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).enterListaArgumentosPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSimpListener ) ((GramaticaSimpListener)listener).exitListaArgumentosPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSimpVisitor ) return ((GramaticaSimpVisitor<? extends T>)visitor).visitListaArgumentosPrint(this);
			else return visitor.visitChildren(this);
		}
	}
